avoid overlap with financial newspapers

--- a/public/ht.css
+++ b/public/ht.css
@@ -9,7 +9,6 @@
 
 @media screen and (min-width: 768px) {
     .article.banner {
-        background-color: #011e29;
         color: #fff;
     }
 }
