--- a/public/ie.css
+++ b/public/ie.css
@@ -14,7 +14,6 @@
 
 @media screen and (min-width: 768px) {
     .article.banner {
-        background-color: #282e47;
         color: #fff;
     }
 }
