--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,8 @@
 body {
     font-family: "Roboto Condensed", sans-serif;
     margin: 0;
-    background-color: rgb(252 243 237);
+    /* background-color: rgb(252 243 237); */
+    background-color: #FCFAF5;
     color: #333;
     font-size: 16px;
     max-width: 100%;
@@ -33,7 +34,6 @@ body {
 }
 
 .container {
-    background-color: rgb(252 243 237);
     max-width: 100%;
     width: 100%;
     margin: 0 auto 0 auto;
@@ -215,7 +215,7 @@ body {
         border: none;
         box-shadow: none;
         padding: 0;
-        background-color: rgb(252 243 237);
+        background-color: inherit;
         color: #fff;
         margin: 0;
         min-height: 30em;
@@ -243,7 +243,6 @@ body {
 
     .article.banner .article-image {
         width: 100%;
-        background-color: rgb(252 243 237);
         padding: 0;
         margin: auto;
     }
@@ -383,7 +382,6 @@ body {
 .article .image {
     width: 100%;
     margin-bottom: 1em;
-    border: 1px solid #eee;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
