--- a/public/toi.css
+++ b/public/toi.css
@@ -9,7 +9,6 @@
 
 @media screen and (min-width: 768px) {
     .article.banner {
-        background-color: #b50000;
         color: #fff;
     }
 }
